--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 <div class="result__content">
                     <p style="font-weight: bold;">Диплом выдан следующей организацией</p>
                     <!-- редакт -->
-                    <p>Республиканское государственное предприятие на праве хозяйственного ведения "Казахский национальный женский педагогический университет" Министерства образования и науки Республики Казахстан</p>
+                    <p>Республиканское государственное предприятие на праве хозяйственного ведения "Казахский Национальный Педагогический  Университет имени Абая" Министерства образования и науки Республики Казахстан</p>
                     <p style="font-weight: bold;">Фамилия, имя, отчество выпускника</p>
                     <!-- редакт -->
-                    <p>ҚАДЫЛБЕК ЖАНЕРКЕ</p>
+                    <p>Туймебаева Ақтолқын Басымханқызы</p>
                     <p style="font-weight: bold;">Специальность</p>
                     <!-- редакт -->
-                    <p>5В060700-Биология</p>
+                    <p>7М01513 - Биология</p>
                     <p style="font-weight: bold;">Период обучения</p>
                     <!-- редакт -->
                     <p>2018 - 2022</p>
                     <p style="font-weight: bold;">Форма обучения</p>
                     <!-- редакт -->
-                    <p>очная</p>
+                    <p>с применением Дот</p>
                 </div>
             </div>
         </main>
